// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a help message when there is less than 2 characters 1`] = `
<div
  className="projects-facet-search"
  data-key="search"
>
  <input
    autoComplete="off"
    className="input-super-large touched"
    onChange={[Function]}
    placeholder="projects.search"
    type="search"
    value="a"
  />
  <span
    className="note spacer-left"
  >
    select2.tooShort.2
  </span>
</div>
`;

exports[`should display a help message when there is less than 2 characters 2`] = `
<div
  className="projects-facet-search"
  data-key="search"
>
  <input
    autoComplete="off"
    className="input-super-large"
    onChange={[Function]}
    placeholder="projects.search"
    type="search"
    value="foo"
  />
  <span
    className="note spacer-left"
  >
    select2.tooShort.2
  </span>
</div>
`;

exports[`should render correctly without any search query 1`] = `
<div
  className="projects-facet-search"
  data-key="search"
>
  <input
    autoComplete="off"
    className="input-super-large"
    onChange={[Function]}
    placeholder="projects.search"
    type="search"
    value=""
  />
  <span
    className="note spacer-left"
  >
    select2.tooShort.2
  </span>
</div>
`;

exports[`should render with a search query 1`] = `
<div
  className="projects-facet-search"
  data-key="search"
>
  <input
    autoComplete="off"
    className="input-super-large"
    onChange={[Function]}
    placeholder="projects.search"
    type="search"
    value="foo"
  />
  <span
    className="note spacer-left"
  >
    select2.tooShort.2
  </span>
</div>
`;
